[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Enemy/Mosquito/Mosquito.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Other/Reusable/Particles/EnemyBlood.tres" type="Material" id=2]
[ext_resource path="res://Scenes/Enemy/Mosquito/Anim/Mosquito1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Enemy/Mosquito/Anim/Mosquito2.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 15 )

[sub_resource type="Animation" id=2]

resource_name = "New Anim"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=3]

length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[node name="Mosquito" type="KinematicBody2D" index="0" groups=[
"Enemy",
]]

scale = Vector2( 2, 2 )
input_pickable = false
collision_layer = 4
collision_mask = 5
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="FlyTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="HitBox" type="Area2D" parent="." index="2" groups=[
"Enemy",
]]

position = Vector2( 0, -10 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox" index="0"]

shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="." index="3"]

z_index = 2
emitting = false
amount = 8
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = ExtResource( 2 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Visibility", "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/New Anim" = SubResource( 2 )
anims/Stun = SubResource( 3 )
blend_times = [  ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="5"]

scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "default"
playing = true
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="FlyTimer" to="." method="_on_FlyTimer_timeout"]

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


